Fixed collapsing floats
Ready for submission

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,11 +39,26 @@ text-align: center;
 }
 
 img {
-  max-width: 90%;
+  display: block;
+  max-width: 100%; 
 
 }
-h1 {
+
+article {
+	margin: 0 auto;
+	width:100%;
+	display: inline-block;
+
+}
+
+.marketing, 
+.travel, 
+.gallery, 
+.search, 
+.map, 
+.calculator {
   font-family: "roboto-slab", sans-serif;
+  
 }
 
 h2 {
@@ -53,6 +68,12 @@ h2 {
 
 h3 {
   font-size: 1.5em;
+
+}
+
+p {
+	display: block;
+	margin: 0 auto;
 
 }
 .wrapper-main {
@@ -67,8 +88,36 @@ h3 {
 }
 .main-text {
   padding: 20px 35px 20px 35px;
-  font-size: 1.35em;
+  font-size: 1.1em;
+  margin: 0;
+  width: 100%;
+  display: inline-block;
+  height: auto;
+}
 
+.portfolio {
+ padding: 0 20px 30px 20px;
+ 
+
+}
+
+.portfolio p {
+	padding-bottom: 20px;
+	width: 80%;
+
+}
+
+.marketing, 
+.travel, 
+.gallery, 
+.search, 
+.map, 
+.calculator {
+	max-height: 500px;
+}
+.portfolio img {
+	max-height: 363px;
+	margin: 0 auto;
 }
 
 .skills {
@@ -77,15 +126,14 @@ h3 {
   margin: 0 10px 0 10px;
   font-size: 1.1rem;
   text-align: center;
-  border: solid 10px red;
-  height: 100px;
+  height: auto;
 
 }
 
 .skills ul {
   list-style: none;
   padding: 0;
-  
+  margin: 0;
 
 }
 
@@ -103,7 +151,8 @@ h3 {
   font-size: 1.35em;
   background: #fafafa;
   padding: 50px 35px 50px 35px;
-  border: solid 20px red;
+  height: auto;
+  text-align: center;
 
 }
 
@@ -201,16 +250,22 @@ a {
 		text-align: left;
 	}
 
-  
-  .marketing, .travel, .gallery  {
+  .portfolio p {
+ font-size: 1.0rem;
+  width: 85%;
+  margin: 0 auto;
+
+  }
+
+  .marketing, .search, .travel  {
 		float: left;
 		width: 50%;
 		padding-left: 10px;
 		padding-right: 10px;
 	}
 
-	.search, .map, .calculator {
-		float: right;
+	.map, .gallery, .calculator {
+		float: left;
 		width: 50%;
 		padding-left: 10px;
 		padding-right: 10px;
@@ -237,7 +292,7 @@ a {
 		display: none;
 	}
 
-	.student-name {
+	.footer-left {
 		padding-top: 10px;
 		padding-bottom: 10px;
 	}
@@ -251,12 +306,15 @@ a {
 @media screen and (min-width: 1024px) {
 	.marketing, .search, .travel, .map, .gallery, .calculator {
 		width: 33.33%;
+		margin: 0 auto;
 	}
 
 	.portfolio p {
 		width: 85%;
 		margin: 0 auto;
 	}
+
+
 }
 
 
